# simplenet_learner

./: .env.example  .gitignore  LICENSE  README.md  get_statistics.py  hello.py  measure_onnx_process_time.py  predict.py  pyproject.toml  test.py  torch2onnx.py  train.py
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.example
config/: train.yaml
config/callbacks/: checkpoint.yaml  default.yaml
config/datamodule/: generic.yaml  mvtecad.yaml
config/experiment/: example.yaml  si_simplenet2d_mh429.yaml  si_simplenet2d_mvtec.yaml
config/hparams_search/: si_simplenet2d_optuna.yaml
config/log_dir/: debug.yaml  default.yaml
config/model/: si_simplenet2d.yaml  simplenet.yaml  simplenet2d.yaml
config/model/optimizer/: adam.yaml
config/trainer/: default.yaml
src/simplenet_learner/: predict_pipeline.py  simplenet.py  simplenet2d_torch2onnx.py  simplenet_get_onnx_statistics_pipeline.py  simplenet_get_statistics_pipeline.py  simplenet_get_torch_statistics_pipeline.py  simplenet_measure_onnx_process_time_pipline.py  simplenet_predict_pipeline.py  testing_pipline.py  training_pipeline.py
src/simplenet_learner/config/callbacks/: default.yaml
src/simplenet_learner/config/sheduler/: steplr.yaml
src/simplenet_learner/config/trainer/: default.yaml
src/simplenet_learner/datamodules/: genericad_lit.py  mvtecad_lit.py
src/simplenet_learner/datamodules/components/: directory_image.py  genericad.py  mvtecad.py
src/simplenet_learner/datamodules/components/transforms/: __init__.py  unnormalize.py
src/simplenet_learner/datamodules/sampler/: balanced_batch_sampler.py
src/simplenet_learner/models/: backborn.py  descriminator.py  projection.py  resnet.py  simplenet.py  simplenet2d_module.py  simplenet_module.py
src/simplenet_learner/models/components/: init_weight.py
src/simplenet_learner/models/networks/: backborn.py  descriminator.py  discriminator.py  onnx_bhwc_wrapper.py  projection.py  si_simplenet2d.py  simplenet.py  simplenet2d.py
src/simplenet_learner/models/networks/components/: __init__.py  spatially_independent_processor.py
src/simplenet_learner/models/optimizers/: __init__.py
src/simplenet_learner/models/schedulers/: __init__.py
src/simplenet_learner/utils/: __init__.py  embed_postprocessor.py  embed_preprocessor.py  history.py  metric.py  noise_generator.py  patch_maker.py  rich_utils.py
src/simplenet_learner/utils/encrypt/: aes_cipher.py
