[project]
name = "simplenet_learner"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "INAGAKI Tatsuya", email = "inagaki.tatsuya@jp.panasonic.com" }
]
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.9.0",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "lightning>=2.5.0.post0",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "torch==2.1.2+cu118",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.6.0",
    "torchvision==0.16.2+cu118",
    "tqdm>=4.67.1",
    "numpy<2",
    "matplotlib>=3.10.0",
    "onnx>=1.17.0",
    "pycryptodome>=3.21.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "simplenet-learner",
]

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }
simplenet-learner = { workspace = true }

[project.scripts]
simplenet_learner = "simplenet_learner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
